--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a part-time I.T. for a nonProfit working on furthering my coding skills by taking the bootcamps at UT Austin</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from the United States</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy reading, writing, playing games (vidoe, card, board, and tabletop) as well as coding</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'd like to get into a Cyber Security job</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Texas</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To further my current knowledge in a variety of coding languages</p>
     </section>
 
     <footer id="footer">
