--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a part-time I.T. for a nonProfit working on furthering my coding skills by taking the bootcamps at UT Austin</p>
+      <p>I am a part-time I.T. for a non-profit working on furthering my coding skills by taking the bootcamps at UT Austin</p>
       <h1>Where I'm From</h1>
       <p>I am from the United States</p>
       <h1>What are your favorite hobbies?</h1>
